add lucida fonts

--- a/src/styl/fonts/fonts.styl
+++ b/src/styl/fonts/fonts.styl
@@ -1,1 +1,7 @@
 // @font-face declarations
+@font-face {
+  font-family: 'lucida';
+  font-style: normal;
+  src: url('../static/fonts/Lucida.eot');
+  src: local('lucida'), url('../static/fonts/Lucida.eot') format('embedded-opentype'), url('../static/fonts/Lucida.woff') format('woff');
+}
