define font-black class

--- a/src/styl/site.styl
+++ b/src/styl/site.styl
@@ -23,6 +23,7 @@ normalize()
 
 $font-sans = font-stack('Helvetica')
 $font-serif = font-stack('Georgia')
+$font-black = 'lucida', font-stack('Georgia')
 
 // ******************************************************
 
@@ -61,6 +62,9 @@ body
 
 .line-larger
   line-height: $font-leading-larger
+
+.font-black
+  font-family: $font-black
 
 // ******************************************************
 
