change font class

--- a/src/styl/site.styl
+++ b/src/styl/site.styl
@@ -23,7 +23,7 @@ normalize()
 
 $font-sans = font-stack('Helvetica')
 $font-serif = font-stack('Georgia')
-$font-black = 'lucida', font-stack('Georgia')
+$font-lucida = 'lucida', font-stack('Georgia')
 
 // ******************************************************
 
@@ -63,8 +63,8 @@ body
 .line-larger
   line-height: $font-leading-larger
 
-.font-black
-  font-family: $font-black
+.font-lucida
+  font-family: $font-lucida
 
 // ******************************************************
 
