--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -14,8 +14,37 @@ $font-size-mid = 24px
 $font-size-small = 18px
 $font-size-tiny = 8px
 
-grid-maker(96%, $gutter, s)
+grid-maker(90%, $gutter, s)
 
 space-maker($margin-micro, $margin-tiny, $margin-small, $margin-basic, $margin-mid, $margin-large)
 
 font-sizes($font-size-basic, $font-size-extra, $font-size-large, $font-size-mid, $font-size-small, $font-size-tiny)
+
+html
+  background-image: linear-gradient(
+    to bottom, 
+    rgba(255,255,255,1) 0%,
+    rgba(255,255,255,1) 40%,
+    rgba(211,211,211,1) 58%,
+    rgba(102,102,102,1) 81%,
+    rgba(73,73,73,1) 100%
+  )
+
+.container
+  max-width: 700px
+
+#header
+  width: 100%
+  max-width: 700px
+  margin-left: auto
+  margin-right: auto
+
+nav
+  border-bottom: 5px solid $color-black
+
+li
+  margin-bottom: .5rem
+
+#logo-holder
+  img
+    display: block
