--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -9,14 +9,17 @@
   $margin-mid = ($gutter * 3.5)
   $margin-large = ($gutter * 5)
 
-  $font-size-basic = 14px
+  $font-size-basic = 18px
+  $font-size-large = 32px
 
   space-maker($margin-micro, $margin-tiny, $margin-small, $margin-basic, $margin-mid, $margin-large)
 
-  grid-maker(680px, $gutter, m)
+  grid-maker(96%, $gutter, m)
 
-  font-sizes($font-size-basic)
+  font-sizes($font-size-basic, false, $font-size-large)
 
   .mobile-only
     display: none !important
 
+  nav
+    border-bottom-width: 7px
