--- a/src/styl/site.styl
+++ b/src/styl/site.styl
@@ -42,7 +42,7 @@ $font-tracking-basic = .001em
 $font-tracking-wider = .05em
 
 html
-  font-family: $font-sans
+  font-family: $font-serif
   letter-spacing: $font-tracking-basic
 
 body
@@ -91,6 +91,9 @@ img
 .desktop-only
   display: none !important
 
+ul, ol
+  margin-bottom: 1rem
+
 // ******************************************************
 
 // MEDIA QUERIES
@@ -101,12 +104,8 @@ img
 
 @import 'responsive/tablet-landscape'
 
-@import 'responsive/laptop'
+//@import 'responsive/laptop'
 
-@import 'responsive/desktop'
+//@import 'responsive/desktop'
 
-@import 'responsive/hd'
-
-@media screen and (min-width: 1920px)
-
-  grid-maker(1800px)
+//@import 'responsive/hd'
