--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -8,21 +8,17 @@ $margin-mid = ($gutter * 3.5)
 $margin-large = ($gutter * 5)
 
 $font-size-basic = 12px
-$font-size-extra = 48px
-$font-size-large = 36px
-$font-size-mid = 24px
-$font-size-small = 18px
-$font-size-tiny = 8px
+$font-size-large = 32px
 
 grid-maker(90%, $gutter, s)
 
 space-maker($margin-micro, $margin-tiny, $margin-small, $margin-basic, $margin-mid, $margin-large)
 
-font-sizes($font-size-basic, $font-size-extra, $font-size-large, $font-size-mid, $font-size-small, $font-size-tiny)
+font-sizes($font-size-basic, false, $font-size-large)
 
 html
   background-image: linear-gradient(
-    to bottom, 
+    to bottom,
     rgba(255,255,255,1) 0%,
     rgba(255,255,255,1) 40%,
     rgba(211,211,211,1) 58%,
@@ -43,7 +39,7 @@ nav
   border-bottom: 5px solid $color-black
 
 li
-  margin-bottom: .5rem
+  margin-bottom: .6rem
 
 #logo-holder
   img
