html min height

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -17,6 +17,7 @@ space-maker($margin-micro, $margin-tiny, $margin-small, $margin-basic, $margin-m
 font-sizes($font-size-basic, false, $font-size-large)
 
 html
+  min-height: 100%
   background-image: linear-gradient(
     to bottom,
     rgba(255,255,255,1) 0%,
