--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -46,5 +46,8 @@ li
   img
     display: block
 
-iframe
-  max-width: 100%
+#map-holder
+  filter: saturate(0)
+  iframe
+    max-width: 100%
+    max-height: 100vw
